--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Configuration/EmailSettings.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Configuration/EmailSettings.cshtml
@@ -66,8 +66,11 @@
 
     </div>
 
+    <hr />
+
     <div class="text-center" style="margin-top:40px">
-        <button type="submit" class="btn btn-info">Aggiorna</button>
+        <button type="submit" class="btn btn-info w-25">Aggiorna</button>
+        <button type="reset" class="btn btn-danger w-25">Reimposta</button>
     </div>
 
 </ajax-form>
