--- a/Sediin.Core.WebUi/Views/_ViewImports.cshtml
+++ b/Sediin.Core.WebUi/Views/_ViewImports.cshtml
@@ -4,6 +4,8 @@
 @using Sediin.Core.WebUi.Data;
 @using Microsoft.AspNetCore.Identity
 @using Sediin.Core.Helpers.Html
+@using Sediin.Core.TemplateConfiguration
+
 
 @using Sediin.Core.Mvc.Helpers.TagHelpers
 @addTagHelper *, Sediin.Core.Mvc.Helpers
