--- a/Sediin.Core.WebUi/wwwroot/css/site.css
+++ b/Sediin.Core.WebUi/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 /*pino tuzzolino*/
-/*css datalist custoizzare  piacere*/
+/*css da custoizzare a piacere*/
 
 /* login registrazione e change password*/
 
