--- a/Sediin.Core.WebUi/wwwroot/css/backend.css
+++ b/Sediin.Core.WebUi/wwwroot/css/backend.css
@@ -1,6 +1,6 @@
 ﻿/*pino tuzzolino*/
 
-/* non odificare colori qui, css base del template, poi customizzare tuo css nel color-profile "site.css"*/
+/* non modificare colori qui, css base del template, poi customizzare tuo css nel color-profile "site.css"*/
 
 body {
     background-repeat: no-repeat;
