--- a/Sediin.Core.WebUi/Areas/Backend/Views/Shared/Components/Menu/NavMenu.cshtml
+++ b/Sediin.Core.WebUi/Areas/Backend/Views/Shared/Components/Menu/NavMenu.cshtml
@@ -149,11 +149,11 @@
         <div class="collapse navbar-collapse" id="navbar1">
             <ul class="navbar-nav mr-auto">
                 <li>
-                    <a class="nav-link" href="javascript:void(0)" 
-                        id="sidebarCollapse" style="color:white">
+                    <a class="nav-link" href="javascript:void(0)" id="sidebarCollapse" style="color:white;">
                         <i class="fas fa-sliders-h marginMenuIcon"></i>
                         <span id="sidebarCollapseText">Chiudi menu</span>
                     </a>
+
                 </li>
 
                 <li>
