--- a/Sediin.Core.WebUi/wwwroot/css/backend.css
+++ b/Sediin.Core.WebUi/wwwroot/css/backend.css
@@ -1,6 +1,6 @@
 ﻿/*pino tuzzolino*/
 
-/* non modificare colori qui, css base del template, poi customizzare tuo css nel color-profile "site.css"*/
+/* non odificare colori qui, css base del template, poi customizzare tuo css nel color-profile "site.css"*/
 
 body {
     background-repeat: no-repeat;
@@ -488,7 +488,7 @@ a.link-black {
         padding: 0.6rem 1.2rem;
     }
 
-    /*end */
+/*end */
 
 
 
@@ -534,3 +534,169 @@ a.link-black {
     --bs-dropdown-header-color: #adb5bd;
 }
 
+a,
+a:hover,
+a:focus {
+    color: inherit;
+    text-decoration: none !important;
+    transition: all 0.3s;
+}
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+
+.wrapper {
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+}
+
+#sidebar {
+    min-width: 300px;
+    max-width: 300px;
+    transition: all 0.3s;
+    border-right: 1px solid #097132;
+    background-color: #f8f7f7;
+}
+
+    #sidebar .sidebar-header {
+        padding: 20px;
+        padding-bottom: 10px;
+        padding-top: 5px;
+        border-bottom: 1px solid #808080;
+    }
+
+    #sidebar.active {
+        margin-left: -300px;
+    }
+
+    #sidebar ul.components {
+        border-bottom: 1px solid #666;
+    }
+
+    #sidebar ul p {
+        /*        color: #fff;
+*/ padding: 10px;
+    }
+
+    #sidebar ul li a {
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        /*padding: 10px;*/
+        /*font-size: 1.1em;*/
+        display: block;
+        font-size: 16px;
+    }
+
+        #sidebar ul li a:hover {
+            color: white;
+            background: #212529;
+        }
+
+    #sidebar ul li.active > a,
+    a[aria-expanded="true"] {
+        /*         color: #fff;
+       background: #6d7fcc;
+*/
+    }
+
+a[data-toggle="collapse"] {
+    position: relative;
+}
+
+#sidebar {
+    border-right: 1px solid #212529;
+}
+
+    #sidebar .sidebar-header {
+        border-bottom: 1px solid #212529;
+    }
+
+/*--------------------------------------------------------*/
+
+
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+    color: white;
+    background-color: #245397;
+}
+
+.nav-pills .nav-link {
+    color: #082c45;
+    border-top: 1px solid #adb5bd;
+    border-left: 1px solid #adb5bd;
+    border-right: 1px solid #adb5bd;
+}
+
+/*--------------------------------------------------------*/
+
+
+
+.nav-link {
+    color: white;
+}
+
+    .nav-link:hover {
+        color: #245397;
+    }
+
+    .nav-link:active {
+        color: white !important;
+    }
+
+    .nav-link:focus {
+        color: white;
+    }
+
+
+body {
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.wrapper {
+    display: flex;
+    width: 100%;
+    flex-grow: 1; /* prende tutta l’altezza residua per il contenuto */
+    align-items: stretch;
+}
+
+#sidebar {
+    width: 300px;
+    transition: margin-left 0.3s ease;
+    background-color: #f8f7f7;
+    border-right: 1px solid #212529;
+}
+
+    #sidebar.active {
+        margin-left: -300px; /* nasconde sidebar */
+    }
+
+#content {
+    flex-grow: 1;
+    transition: margin-left 0.3s ease;
+}
+
+    /* Il menù orizzontale dentro content */
+    #content > nav {
+        width: 100%;
+    }
+
+    #content.fullwidth {
+        margin-left: 0;
+        width: 100%;
+    }
+
+footer {
+    width: 100%;
+    padding: 15px;
+    font-size: 14px;
+    background-color: #245397;
+    color: white;
+    border-top: 1px solid #fba341;
+    box-sizing: border-box;
+    text-align: center;
+}
