--- a/Sediin.Core.WebUi/wwwroot/css/backend.css
+++ b/Sediin.Core.WebUi/wwwroot/css/backend.css
@@ -3,26 +3,36 @@
 /* non odificare colori qui, css base del template, poi customizzare tuo css nel color-profile "site.css"*/
 
 body {
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    min-height: 100dvh;
-    margin: 0;
     display: flex;
     flex-direction: column;
+    min-height: 100vh; /* o 100dvh se vuoi */
+    margin: 0;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
 }
 
-main {
-    flex: 1;
+
+#content {
+    width: 100%;
+    padding: 20px;
+    padding-left: 0px;
+    padding-right: 0px;
+    min-height: 100vh;
+    transition: all 0.3s;
+    overflow: hidden;
 }
 
 footer {
+    width: 100%;
     padding: 15px;
     font-size: 14px;
-    bottom: 0;
-    width: 100%;
-    height: 50px;
+    background-color: #245397;
+    color: white;
+    border-top: 1px solid #fba341;
+    box-sizing: border-box;
+    text-align: center;
+    /* non serve bottom: 0 o position fixed */
 }
-
 footer {
     background-color: #245397;
     color: white;
@@ -37,6 +47,10 @@ footer {
     flex-grow: 1; /* prende tutta l’altezza residua per il contenuto */
 }
 
+main, #content, .wrapper {
+    flex-grow: 1; /* prende tutto lo spazio disponibile */
+    /* togli eventuali min-height: 100vh da #content o altri contenitori */
+}
 
 .blink {
     animation: blink-animation 1s steps(5, start) infinite;
@@ -52,16 +66,6 @@ footer {
 }
 
 /* CONTENT STYLE ----------------------------------------------------- */
-
-#content {
-    width: 100%;
-    padding: 20px;
-    padding-left: 0px;
-    padding-right: 0px;
-    min-height: 100vh;
-    transition: all 0.3s;
-    overflow: hidden;
-}
 
 
 @keyframes blink-animation {
@@ -397,12 +401,12 @@ a.link-black {
 /* login registrazione e change password*/
 
 .email-confirmation-container {
-    min-height: 100vh;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     background: #f7f9fc;
-    padding: 2rem;
+    padding: 2rem; /* per un po’ di spazio */
 }
 
 .email-confirmation-box {
@@ -426,11 +430,12 @@ a.link-black {
 
 
 .login-container {
-    min-height: 100vh;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     background: #f7f9fc;
+    padding: 2rem; /* per un po’ di spazio */
 }
 
 .login-box {
@@ -459,12 +464,12 @@ a.link-black {
 
 
 .reset-container {
-    min-height: 100vh;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
     background: #f7f9fc;
-    padding: 2rem;
+    padding: 2rem; /* per un po’ di spazio */
 }
 
 .reset-box {
