--- a/Sediin.Core.WebUi/Views/Shared/_Layout.cshtml
+++ b/Sediin.Core.WebUi/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-       @Configuration.GetSection("ApplicationSettings")["ApplicationName"]?.ToString()
+        @Configuration.GetSection("ApplicationSettings")["ApplicationName"]?.ToString()
     </title>
 
     <script type="importmap"></script>
@@ -28,8 +28,8 @@
     <header class="blurEffect">
         <nav class="navbar navbar-expand-lg navbar-custom shadow">
 
-            <button class="navbar-toggler" type="button" 
-            data-bs-toggle="collapse"
+            <button class="navbar-toggler" type="button"
+                    data-bs-toggle="collapse"
                     data-bs-target="#navbarSediinWebUi" aria-controls="navbarSediinWebUi"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -75,13 +75,12 @@
 
 
     <footer class="container-fluid blurEffect">
-        <div class="row">
-            <div class="col-md-4" style="text-align: left;">
-                @Configuration.GetSection("ApplicationSettings")["ApplicationName"]?.ToString()
-            </div>
-            <div class="col-md-4" style="text-align: center;">&nbsp;</div>
-            <div class="col-md-4" style="text-align: right;">&copy; Sediin Spa</div>
-        </div>
+        <span>
+            @Configuration.GetSection("ApplicationSettings")["ApplicationName"]?.ToString()
+        </span>
+        <span>
+            &copy; Sediin Spa
+        </span>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
