--- a/Sediin.Core.WebUi/Areas/Backend/Views/Shared/_Layout.cshtml
+++ b/Sediin.Core.WebUi/Areas/Backend/Views/Shared/_Layout.cshtml
@@ -1,5 +1,11 @@
 ﻿@using Microsoft.Extensions.Configuration
-@inject IConfiguration Configuration
+@using Sediin.Core.TemplateConfiguration
+@using Sediin.Core.TemplateConfiguration.Models
+@inject ISediinCoreConfiguration Configuration
+
+@{
+    RagioneSociale ragioneSociale = Configuration.Get().Result.RagioneSociale;
+}
 
 
 <!DOCTYPE html>
@@ -9,7 +15,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-        @Configuration.GetSection("ApplicationSettings")["ApplicationName"]?.ToString()
+        @ragioneSociale.Nome
     </title>
 
     <script type="importmap"></script>
@@ -56,7 +62,7 @@
 
     <footer class="container-fluid blurEffect">
         <span>
-            @Configuration.GetSection("ApplicationSettings")["ApplicationName"]?.ToString()
+            @ragioneSociale.Nome
         </span>
         <span>
             &copy; Sediin Spa
@@ -74,7 +80,6 @@
     <script src="~/js/globalize/cultures/globalize.culture.it-IT.js"></script>
     <script src="~/js/validator.methods.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/lib/font-awesome/js/all.min.js"></script>
     <script src="~/lib/font-awesome/js/all.js"></script>
     <script src="~/js/utils.js"></script>
@@ -84,10 +89,9 @@
     <script src="~/js/modale.js"></script>
     <script src="~/js/onesidepage.js"></script>
     <script src="~/js/toastr.js"></script>
-    @await RenderSectionAsync("Scripts", required: false)
 
     <script>
-                $(document).ready(function () {
+        $(document).ready(function () {
             $('#sidebarCollapse').on('click', function () {
                 $('#sidebar').toggleClass('active');
                 $('#content').toggleClass('fullwidth');
@@ -99,8 +103,9 @@
                 }
             });
         });
-
     </script>
+
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
 
