--- a/Sediin.Core.WebUi/Views/_ViewImports.cshtml
+++ b/Sediin.Core.WebUi/Views/_ViewImports.cshtml
@@ -5,7 +5,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Sediin.Core.Helpers.Html
 @using Sediin.Core.TemplateConfiguration
-
+@using Sediin.Core.TemplateConfiguration.Models
 
 @using Sediin.Core.Mvc.Helpers.TagHelpers
 @addTagHelper *, Sediin.Core.Mvc.Helpers
