--- a/Sediin.Core.WebUi/wwwroot/css/site.css
+++ b/Sediin.Core.WebUi/wwwroot/css/site.css
@@ -58,6 +58,10 @@ footer {
     border-bottom: 1px solid #fba341;
 }
 
+    .navbar-custom a:hover {
+        color: #c1daff;
+    }
+
 .navbar {
     padding: 15px 10px;
     background: #fff;
@@ -126,7 +130,7 @@ footer {
 }
 
     .nav-link:hover {
-        color: #245397;
+        color: rgba(0, 0, 0, 0.1);
     }
 
     .nav-link:active {
