ResetPassword con show/hide

--- a/Sediin.Core.WebUi/Views/Authentication/ResetPassword.cshtml
+++ b/Sediin.Core.WebUi/Views/Authentication/ResetPassword.cshtml
@@ -1,5 +1,7 @@
 ﻿@model Sediin.Core.WebUi.Models.ResetPasswordViewModel
 
+<link href="~/css/hideshowpassword.css" rel="stylesheet" />
+
 <div class="reset-container">
     <div class="reset-box">
         <div class="text-center mb-4">
@@ -48,12 +50,25 @@
     </div>
 </div>
 
-<script>
-    function onSuccessResetPassword(data) {
-        alertSuccessNoCloseButton(data);
+@section Scripts {
+    <script src="~/js/hideshowpassword.js"></script>
 
-        setTimeout(function () {
-            location.href = "/Authentication/Login";
-        }, 2000)
-    }
-</script>
+    <script>
+        $(document).ready(function () {
+            $('#Password').hideShowPassword({
+                innerToggle: true
+            });
+            $('#ConfirmPassword').hideShowPassword({
+                innerToggle: true
+            });
+        });
+
+        function onSuccessResetPassword(data) {
+            alertSuccessNoCloseButton(data);
+
+            setTimeout(function () {
+                location.href = "/Authentication/Login";
+            }, 2000)
+        }
+    </script>
+}
