layout mail template

--- a/Sediin.Core.WebUi/Areas/TemplateEmail/Views/Shared/_Layout.cshtml
+++ b/Sediin.Core.WebUi/Areas/TemplateEmail/Views/Shared/_Layout.cshtml
@@ -1,4 +1,10 @@
-﻿
+﻿@using Sediin.Core.TemplateConfiguration
+@using Sediin.Core.TemplateConfiguration.Models
+@inject ISediinCoreConfiguration Configuration
+@{
+    RagioneSociale ragioneSociale = Configuration.Get().Result.RagioneSociale;
+}
+
 <!DOCTYPE html>
 <html lang="it">
 
@@ -22,23 +28,38 @@
 <body>
 
     <div class="row">
-
         <div class="col-md-12">
             <img src="cid:logo_cid" alt="Logo" />
         </div>
-
-        
-        <div class="col-md-12" style="padding-top:40px">
-
-
-            @RenderBody()
-
-        </div>
-
-
     </div>
 
+    <br />
+    <hr />
+    <br />
+    <br />
 
+    <div class="row">
+        <div class="col-md-12">
+            @RenderBody()
+        </div>
+    </div>
+
+    <br />
+    <br />
+    <br />
+    <p style="" margin-top:30px; font-size:0.9em; color:#666;"">
+        <em>Nota: questa email è stata inviata automaticamente dal sistema, ti preghiamo di non rispondere.</em>
+    </p>
+    <br />
+    <hr />
+    <br />
+
+    <div class="row">
+        <strong>@ragioneSociale.Nome</strong><br />
+        Piva: @ragioneSociale.PartitaIva - Cf: @ragioneSociale.CodiceFiscale<br />
+        Tel: @ragioneSociale.Telefono - Email: @ragioneSociale.Email<br />
+        @ragioneSociale.Indirizzo - @ragioneSociale.Cap @ragioneSociale.Citta @ragioneSociale.Provincia
+    </div>
 
 
 </body>
