--- a/Sediin.Core.WebUi/Areas/Backend/Views/Shared/_Layout.cshtml
+++ b/Sediin.Core.WebUi/Areas/Backend/Views/Shared/_Layout.cshtml
@@ -89,6 +89,7 @@
     <script src="~/js/modale.js"></script>
     <script src="~/js/onesidepage.js"></script>
     <script src="~/js/toastr.js"></script>
+    <script src="~/js/soundmanager2-jsmin.js"></script>
 
     <script>
         $(document).ready(function () {
