--- a/Sediin.Core.WebUi/Views/Shared/_Layout.cshtml
+++ b/Sediin.Core.WebUi/Views/Shared/_Layout.cshtml
@@ -102,6 +102,7 @@
     <script src="~/js/inputs.js"></script>
     <script src="~/js/customvalidator.js"></script>
     <script src="~/js/modale.js"></script>
+    <script src="~/js/soundmanager2-jsmin.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
