--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/ModificaUtente.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/ModificaUtente.cshtml
@@ -14,8 +14,10 @@
             <div>@Model.Username</div>
 
         </div>
+        <div class="col-md-6 form-group">
+            @Html.LabelFor(model => model.Ruolo)
+            <div>@Model.Ruolo</div>
 
-        <div class="col-md-6">
         </div>
 
         <div class="col-md-6 form-group">
