--- a/Sediin.Core.WebUi/Areas/Backend/Views/Shared/Components/Menu/NavMenu.cshtml
+++ b/Sediin.Core.WebUi/Areas/Backend/Views/Shared/Components/Menu/NavMenu.cshtml
@@ -181,7 +181,7 @@
                         <span style="-webkit-text-stroke-width: 1px;" class="navtestobenvenuto">Benvenuto</span>&nbsp;
 
                         <span class="text-capitalize">
-                            <span>@_user.Nome @_user.Cognome</span>
+                            <span>@_user.User.Nome @_user.User.Cognome</span>
                         </span>
                         <div style="font-size: 12px; text-align: right; -webkit-text-stroke-width: 1px; -webkit-text-stroke-color: red; " class="text-info">altre opzioni</div>
                     </a>
