--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaList.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/RicercaList.cshtml
@@ -11,8 +11,8 @@ else
         <table class="table table-striped table-bordered table-hover">
             <thead>
                 <tr class="text-center table-info">
-                    <th>Nome</th>
-                    <th>Cognome</th>
+                    <th>Nominativo</th>
+                    <th>Username</th>
                     <th>Email</th>
                     <th>Ruolo</th>
                     <th style="width:100px;"></th>
@@ -22,15 +22,15 @@ else
                 @foreach (var item in Model.Result)
                 {
                     <tr>
-                        <td>@item.User.Nome</td>
-                        <td>@item.User.Cognome</td>
+                        <td>@item.User.Nome @item.User.Cognome</td>
+                        <td>@item.User.UserName</td>
                         <td>@item.User.Email</td>
                         <td>@item.Roles.FirstOrDefault()</td>
                         <td>
 
                             <div class="dropdown">
-                                <button class="btn btn-primary btn-sm dropdown-toggle w-100" type="button" 
-                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <button class="btn btn-primary btn-sm dropdown-toggle w-100" type="button"
+                                        data-bs-toggle="dropdown" aria-expanded="false">
                                     Azioni
                                 </button>
                                 <ul class="dropdown-menu">
@@ -45,15 +45,28 @@ else
                                         </a>
 
                                     </li>
-                                    <li>
-                                        <a href="javascript:void(0)" onclick="rimuoviUtenza('@item.User.Id')"
-                                           class="dropdown-item">Elimina utente</a>
 
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Blocca utente</a></li>
+                                    @if (User.Identity.Name != item.User.UserName)
+                                    {
+                                        <li>
+                                            <a href="javascript:void(0)" onclick="eliminaUtente('@item.User.Id')"
+                                               class="dropdown-item">Elimina utente</a>
+
+                                        </li>
+
+                                        @if (item.User.LockoutEnabled == true && item.User.LockoutEnd == DateTimeOffset.MaxValue)
+                                        {
+                                            <li><a class="dropdown-item" href="#">Sblocca utente</a></li>
+                                        }
+                                        else{
+                                            <li><a class="dropdown-item" href="#">Blocca utente</a></li>
+                                        }
+                                        
+                                    }
+                                   
                                 </ul>
                             </div>
-                           
+
                         </td>
                     </tr>
                 }
@@ -62,16 +75,9 @@ else
     </div>
 
     <script>
-        function rimuoviUtenza(id) {
-            confirmAndPostAction("@Url.Action("RiumoviUtenza", "Memberships")", { id }, "Sicuro di voler \"eliminare\" questa utenza?", "onSuccessRiumoviUtenza()");
+        function eliminaUtente(id) {
+            confirmAndPostAction("@Url.Action("EliminaUtente", "Utenti")", { id }, "Sicuro di voler \"eliminare\" questa utenza?");
         }
-
-        function onSuccessRiumoviUtenza() {
-            updateListRicerca();
-            alertClose();
-            toastSuccess("Utente eliminato");
-        }
-
 
     </script>
 
