--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Configuration/EmailTest.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Configuration/EmailTest.cshtml
@@ -18,7 +18,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+@*         <div class="form-group">
             @Html.LabelFor(model => model.Oggetto, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-12">
                 @Html.EditorFor(model => model.Oggetto, new { htmlAttributes = new { @class = "form-control" } })
@@ -34,10 +34,10 @@
             </div>
         </div>
 
-
-        <div class="text-center" style="margin-top:40px">
-            <button type="submit" class="btn btn-info w-25">Invia Email di Test</button>
-            <button type="button" class="btn btn-danger w-25" data-dismiss="modal" onclick="hideModal()">Chiudi</button>
+ *@
+        <div class="modal-footer" style="margin-top:40px">
+            <button type="submit" class="btn btn-info">Invia Email di Test</button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal" onclick="hideModal()">Chiudi finestra</button>
         </div>
     </div>
 
