--- a/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/ChangePassword.cshtml
+++ b/Sediin.Core.WebUi/Areas/Administrator/Views/Utenti/ChangePassword.cshtml
@@ -27,13 +27,11 @@
             @Html.PasswordFor(model => model.ConfirmNewPassword)
             @Html.ValidationMessageFor(model => model.ConfirmNewPassword)
         </div>
+    </div>
 
-        <div class="modal-footer row mt-5">
-            <div class="col-md-12 text-center">
-                <input type="submit" value="Modifica Password" class="btn btn-info" />
-                <input type="button" value="Chiudi finestra" onclick="hideModal()" class="btn btn-danger" />
-            </div>
-        </div>
+    <div class="modal-footer" style="margin-top:40px">
+        <input type="submit" value="Modifica Password" class="btn btn-info" />
+        <input type="button" value="Chiudi finestra" onclick="hideModal()" class="btn btn-danger" />
     </div>
 </ajax-form>
 
